--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   "dependencies": {
     "@liveblocks/client": "^2.22.2",
     "@liveblocks/react": "^2.22.2",
+    "@liveblocks/react-comments": "^1.12.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "fabric": "^6.6.1",
+    "init": "^0.1.2",
+    "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "shadcn": "^2.3.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -23,9 +31,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
