--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@liveblocks/client": "^2.22.2",
     "@liveblocks/react": "^2.22.2",
-    "@liveblocks/react-comments": "^1.12.0",
+    "@liveblocks/react-ui": "^2.22.2",
+    "@radix-ui/react-context-menu": "^2.2.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "fabric": "^6.6.1",
+    "fabric": "^5.3.0",
     "init": "^0.1.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -28,9 +34,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/fabric": "^5.3.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
