--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "fabric": "^5.3.0",
+    "framer-motion": "^12.16.0",
     "init": "^0.1.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.485.0",
